gfx/layers/Layers.h
@@ -258,6 +258,12 @@ public:
    * The callee must draw all of aRegionToDraw.
    * This region is relative to 0,0 in the PaintedLayer.
    *
+   * aDirtyRegion contains the region that is due to be painted at some point,
+   * even though only aRegionToDraw should be drawn during this call.
+   * They will often be equal, but aDirtyRegion may be larger, for example
+   * when painting progressively. aRegionToDraw must be entirely contained
+   * within aDirtyRegion.
+   *
    * aRegionToInvalidate contains a region whose contents have been
    * changed by the layer manager and which must therefore be invalidated.
    * For example, this could be non-empty if a retained layer internally
@@ -278,6 +284,7 @@ public:
   typedef void (* DrawPaintedLayerCallback)(PaintedLayer* aLayer,
                                            gfxContext* aContext,
                                            const nsIntRegion& aRegionToDraw,
+                                           const nsIntRegion& aDirtyRegion,
                                            DrawRegionClip aClip,
                                            const nsIntRegion& aRegionToInvalidate,
                                            void* aCallbackData);
